[FIX]: wraps inline codes

--- a/src/components/posts/post-template/code-block.styles.scss
+++ b/src/components/posts/post-template/code-block.styles.scss
@@ -253,6 +253,7 @@ pre[class*="language-"] {
   padding: 0.1rem;
   border-radius: 2px;
   background: #555c6f;
+  white-space: pre-wrap;
 }
 
 .token.comment,
